examples/test/testpolicy10808.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10808
  namespace: namespace435
spec:
  podSelector:
    matchLabels:
      key11: value34
      key27: value17
      key41: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value16
          key40: value13
      podSelector:
        matchLabels:
          key25: value12
          key26: value46
          key31: value35
